[project]
name = "common-package"
version = "1.0.14"
description = "These Python scripts are used as modules in the repositories r-nakashima-geophysics/MHD-2D-sphere and r-nakashima-geophysics/MHD-2D-box."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.1",
    "mypy>=2.3.0",
    "numpy>=2.5.1",
    "psutil>=7.2.2",
    "pycodestyle>=2.14.0",
    "pylint>=4.0.6",
    "scipy>=1.18.0",
    "scipy-stubs>=1.18.0.1",
    "types-psutil>=7.2.2.20260518",
]
